--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React web application</title>
+    <title>React ukol moda</title>
   </head>
   <body>
     <div id="app"></div>
     <script src="/bundle.js"></script>
+
   </body>
 </html>
